# rust-conceptual

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-learnings.code-workspace
.devcontainer/: .gitignore
.github/workflows/: devskim.yml  main.yml  rust-clippy.yml
adder/src/: lib.rs
adder/tests/: integration_test.rs
adder/tests/common/: mod.rs
blog/src/: lib.rs
book/book_tutorials/: Cargo.toml
example/cachers/: Cargo.toml  client.rs
example/cachers-client/: Cargo.toml
example/cachers-client/src/: main.rs
example/cachers/src/: main.rs
example/grpc-example/: Cargo.toml  build.rs
example/grpc-example/proto/: health.proto
example/grpc-example/src/: server.rs
example/rocksdb-example/: Cargo.toml
example/rocksdb-example/src/: main.rs
example/web-api/: Cargo.toml  README.md
example/web-api/data/ddl/: create_user_detail.sql
example/web-api/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
shirt-company/src/: main.rs
src/: enum_lession_1.rs  lib.rs  loop_tutorial_1.rs  loop_tutorial_2.rs  mask_errors.rs  mutable_string.rs  option_some_tutorial.rs  primitives.rs  string_ownership.rs
tutorials/src/: enum_lession3.rs  enum_lession_2.rs  file_io_tutorial.rs  file_io_tutorial_2.rs  generics_tutorial_1.rs  generics_tutorial_2.rs  hashmap_tutorial1.rs  lib.rs  lifetimes.rs  main.rs  math.rs  media_aggregator.rs  murable_ref.rs  news_article.rs  panitutorial1.rs  shoe.rs  slice.rs  slice_tutorial_1.rs  string_slices.rs  string_to_chars.rs  string_tutorial1.rs  struct.rs  struct_square.rs  struct_tutorial_1.rs  struct_tutorial_2.rs  tweet.rs  vector_tutorial1.rs  vim_learnings.rs
tutorials/src/front_of_house/: hosting.rs
tutorials/src/media_aggrigator/: news_article.rs  summary.rs  tweet.rs
web_server/: index.html
web_server/k6/: run.js
web_server/src/: lib.rs  main.rs
web_server/static/: 404.json
workspace/: Cargo.toml
workspace/add_one/: Cargo.toml
workspace/add_one/src/: lib.rs
workspace/adder/src/: main.rs
workspace/adder/tests/: integration_test.rs
workspace/adder_ws/: Cargo.toml
workspace/adder_ws/src/: main.rs
workspace/async_await_fn/: Cargo.toml
workspace/async_await_fn/src/: main.rs
workspace/async_future/: Cargo.toml
workspace/async_future/src/: main.rs
workspace/at_binding/: Cargo.toml
workspace/at_binding/src/: main.rs
workspace/averaged_collection/: Cargo.toml
workspace/averaged_collection/src/: lib.rs  main.rs
workspace/binary-tree/src/: main.rs
workspace/channel/src/: main.rs
workspace/converter/src/: lib.rs  main.rs
workspace/deltalake_setup/: Cargo.toml
workspace/deltalake_setup/src/: main.rs
workspace/destructuring/src/: main.rs
workspace/fn_params/: Cargo.toml
workspace/fn_params/src/: main.rs
workspace/foreign_function/: Cargo.toml
workspace/foreign_function/src/: main.rs
workspace/future_streams/: Cargo.toml
workspace/future_streams/src/: main.rs
workspace/global_variable/src/: main.rs
workspace/guessing_game/: Cargo.toml
workspace/gui/src/: lib.rs  main.rs
workspace/interior_mut/: Cargo.toml
workspace/interior_mut/src/: lib.rs  main.rs
workspace/iterator/src/: lib.rs  main.rs
workspace/minigrep/: README.md
workspace/minigrep/src/: lib.rs
workspace/mutex/src/: main.rs
workspace/newtype_pattern/: Cargo.toml
workspace/newtype_pattern/src/: main.rs
workspace/pattern_matching/src/: main.rs
workspace/pointer_deref/: Cargo.toml
workspace/pointer_deref/src/: lib.rs  main.rs
workspace/pointer_drop/: Cargo.toml
workspace/pointer_drop/src/: main.rs
workspace/polymorphism/src/: lib.rs  main.rs
workspace/rayon_server/: Cargo.toml
workspace/rayon_server/src/: main.rs
workspace/rc_memory_leak/: Cargo.toml
workspace/rc_memory_leak/src/: main.rs
workspace/reference_counter/: Cargo.toml
workspace/reference_counter/src/: main.rs
workspace/returning_closure/src/: main.rs
workspace/shirt_company/: Cargo.toml
workspace/shirt_company/src/: lib.rs
workspace/smart_pointers/src/: main.rs
workspace/thread_spawn/src/: main.rs
workspace/tide_web_server/: Cargo.toml
workspace/tide_web_server/src/: main.rs
workspace/timer_future/src/: lib.rs  main.rs
workspace/tokio_server/: Cargo.toml
workspace/tokio_server/src/: main.rs
workspace/trait_objects/src/: lib.rs  main.rs
workspace/tree_node/: Cargo.toml
workspace/tree_node/src/: main.rs
workspace/use_unsafe/: Cargo.toml  lib.rs
workspace/use_unsafe/src/: main.rs
workspace/util/src/: main.rs
workspace/web_server/src/: lib.rs
workspace/whoami/: Cargo.toml
workspace/whoami/src/: lib.rs  main.rs
workspace/whoami/whoami_derive/: Cargo.toml
workspace/whoami/whoami_derive/src/: lib.rs
workspace/workday/: Cargo.toml
workspace/workday/src/: main.rs
