[workspace]

exclude = ["tutorials"]

members = [
    "blog",
    "book/book_tutorials",
    "book/guessing_game",
    "workspace/add_one",
    "workspace/adder",
    "workspace/adder_ws",
    "workspace/at_binding",
    "workspace/averaged_collection",
    "workspace/channel",
    "workspace/destructuring",
    "workspace/foreign_function",
    "workspace/global_variable",
    "workspace/gui",
    "workspace/interior_mut",
    "workspace/minigrep",
    "workspace/mutex",
    "workspace/pattern_matching",
    "workspace/pointer_deref",
    "workspace/pointer_drop",
    "workspace/rc_memory_leak",
    "workspace/reference_counter",
    "workspace/shirt_company",
    "workspace/smart_pointers",
    "workspace/thread_spawn",
    "workspace/tree_node",
    "workspace/gui",
    "workspace/use_unsafe",
    "workspace/workday",
]
