[workspace]
resolver = "2"

exclude = ["tutorials"]

members = [
    # "example/grpc-example",
    "example/rocksdb-example",
    "example/web-api",
    "workspace/add_one",
    "workspace/adder",
    "workspace/adder_ws",
    "workspace/async_await_fn",
    "workspace/async_future",
    "workspace/at_binding",
    "workspace/averaged_collection",
    "workspace/binary_tree",
    "workspace/blog",
    "workspace/channel",
    "workspace/deltalake_setup",
    "workspace/destructuring",
    "workspace/fn_params",
    "workspace/foreign_function",
    "workspace/future_streams",
    "workspace/global_variable",
    "workspace/guessing_game",
    "workspace/gui",
    "workspace/interior_mut",
    "workspace/iterator",
    "workspace/minigrep",
    "workspace/mutex",
    "workspace/newtype_pattern",
    "workspace/pattern_matching",
    "workspace/pointer_deref",
    "workspace/pointer_drop",
    "workspace/polymorphism",
    "workspace/rayon_server",
    "workspace/rc_memory_leak",
    "workspace/reference_counter",
    "workspace/returning_closure",
    "workspace/shirt_company",
    "workspace/smart_pointers",
    "workspace/thread_spawn",
    "workspace/tide_web_server",
    "workspace/timer_future",
    "workspace/tokio_server",
    "workspace/tree_node",
    "workspace/gui",
    "workspace/use_unsafe",
    "workspace/util",
    "workspace/web_server",
    "workspace/whoami",
    "workspace/workday",
]
