
[package]
name = "web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18" }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
axum = "0.7.5"
